# frameWatch

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  vcpkg.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
include/framewatch/: framewatch.h
include/framewatch/bootstrap/: injected_runtime.h
include/framewatch/core/: frame_sample.h  frametime_tracker.h  metrics_engine.h  present_event.h  session_logger.h
include/framewatch/exporter/: csv_exporter.h  json_exporter.h
include/framewatch/gpu/: gpu_metrics.h  gpu_metrics_sampler.h
include/framewatch/hooks/: hook_overlay_service.h  present_hook.h
include/framewatch/hooks/vulkan/: vulkan_present_hook_win.h
include/framewatch/ipc/: ipc_server.h
include/framewatch/overlay/: overlay_model.h  overlay_renderer.h  overlay_runtime.h  overlay_settings.h
include/framewatch/platform/: window_targeting.h
include/framewatch/session/: performance_session.h
samples/python/: framewatch_ctypes.py
src/app/: debug_window_main.cpp  dx11_hook_smoke_win.cpp  dx12_hook_smoke_win.cpp  framewatch_injector_win.cpp  main.cpp  preload_smoke_linux.cpp  viewer_main.cpp  vulkan_hook_smoke_win.cpp
src/app/debug_window/: bitmap_font.cpp  bitmap_font.h  renderer.cpp  renderer.h  targeting.cpp  targeting.h  types.h  ui_panels.cpp  ui_panels.h
src/bootstrap/: injected_runtime_win.cpp
src/c_api/: framewatch_c.cpp
src/core/: frametime_tracker.cpp  metrics_engine.cpp  session_logger.cpp
src/exporter/: csv_exporter.cpp  json_exporter.cpp
src/gpu/: gpu_metrics_factory.cpp  gpu_metrics_sampler.cpp  null_gpu_provider.cpp  nvml_gpu_provider.cpp  sysfs_gpu_provider.cpp
src/hooks/: hook_overlay_service.cpp  present_hook.cpp
src/hooks/dx11/: dx11_present_hook_win.cpp
src/hooks/dx12/: dx12_present_hook_win.cpp
src/hooks/vulkan/: vulkan_present_hook_win.cpp
src/ipc/: ipc_server.cpp
src/overlay/: overlay_model.cpp  overlay_renderer_stub.cpp  overlay_runtime.cpp  overlay_settings.cpp
src/overlay/dx11/: dx11_overlay_renderer_win.cpp
src/platform/: window_targeting_macos.cpp  window_targeting_stub.cpp
src/preload/: framewatch_preload_linux.cpp
src/session/: performance_session.cpp
tests/: metrics_tests.cpp
